--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "form-data": "^4.0.2",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mailgun.js": "^12.0.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "uuid": "^11.1.0"
