--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mailgun.js": "^12.0.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^2.7.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
