--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-toastify": "^11.0.5",
     "sass": "^1.88.0",
     "serve": "^14.2.4",
+    "swiper": "^11.2.6",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
