--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "form-data": "^4.0.2",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
